--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,2 @@
-<p><small>© 2022 William Jungerman. Powered by <a href="https://jekyllrb.com/">Jekyll</a></small></p>
+<p><small>© 2022 William Jungerman. Powered by <a href="https://jekyllrb.com/">Jekyll</a>. <br/> Picture by @changedrew. </small></p>
+
