add journal link & bibtex

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,12 +16,15 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
 
     <link rel="preload" href="{{site.logo | relative_url}}" as="image">
+    <link rel="shortcut icon" href="#">
+
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     {% include head-custom.html %}
   </head>
   <body>
+    <script src="/assets/js/scripts.js"></script>
     <div class="wrapper">
       <div class="sidebar">
         <header>
